<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- App Bar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />

    <!-- Grid Layout -->
    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:columnCount="2"
        app:alignmentMode="alignMargins"
        android:padding="16dp">

        <!-- Food Suggestions -->
        <androidx.cardview.widget.CardView
            android:id="@+id/foodSuggestion1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/foodSuggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_food_suggestion"
                    android:contentDescription="@string/food_suggestions_icon_desc" />

                <TextView
                    android:id="@+id/textFoodSuggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/food_suggestions"
                    android:textAlignment="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Setting -->
        <androidx.cardview.widget.CardView
            android:id="@+id/setting1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings"
                    android:contentDescription="@string/settings_icon_desc" />

                <TextView
                    android:id="@+id/textSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/setting"
                    android:textAlignment="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Upload Picture -->
        <androidx.cardview.widget.CardView
            android:id="@+id/uploadPicture1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/uploadPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_upload_picture"
                    android:contentDescription="@string/upload_picture_icon_desc" />

                <TextView
                    android:id="@+id/textUploadPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/upload_picture"
                    android:textAlignment="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Order Translation -->
        <androidx.cardview.widget.CardView
            android:id="@+id/orderTranslation1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/orderTranslation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_order_translation"
                    android:contentDescription="@string/order_translation_icon_desc" />

                <TextView
                    android:id="@+id/textOrderTranslation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/order_translation"
                    android:textAlignment="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.gridlayout.widget.GridLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
